--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="flexible">
        
             <div class="half-width">
-                <h1><span class="orange">skip</span> the diet,<br>just eat healthy with Orengo</h1>
+                <h1><span class="orange">skip</span> the diet,<br>just eat healthy with Hide out lounge</h1>
                 <p>Imagine you don't need a diet because we provide <br>healthy and delicious food for you!</p>
                 <a class="link-button"target="-blank" href="https://www.linkedin.com/">order food</a>
             </div>
@@ -23,6 +23,17 @@
                 <img src="images/women-1.png" alt="">
             </div>
        
+    </section>
+    <section class="flexible about-us">
+            <div class="half-width ">
+                <img class="about-img" src="images/Person Image.png" alt="">
+
+            </div>
+            <div class="half-width">
+                <h2>about us</h2>
+                <p class="about-para">Hide out lounge food a brand new concept high quality authentic Bangladeshi cuisine simple to order,eat and enjoy.</p>
+                <a class="link-button"target="-blank" href="https://www.google.com/">For details</a>
+            </div>
     </section>
 </body>
 </html>
